--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "hardhat": "^2.17.4"
+  },
+  "dependencies": {
+    "ethers": "^5.7.2"
   }
 }
